--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: adhara_mathphysのページ
-description: 魚
+description: 家
 lang: ja
 google_analytics: UA-176820219-1
 plugins:
